--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
             cursor: pointer;
         }
         
-        .btn_getLink::hover {
+        .btn_getLink:hover {
             background: 5dc390;
         }
         
