--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
 }(window.location, window.projectPages || false ))</script>
 </head><body>
    <div> 
-    <object type="text/html" data="http://t.me/nikitashal"">
+    <object type="text/html" data="http://t.me/nikitashal">
     </object>
  </div>  
 </body></html>
