--- a/index.html
+++ b/index.html
@@ -379,6 +379,9 @@
         *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
         .clearfix:before, .clearfix:after { content: ''; display: table; }
         .clearfix:after { clear: both; }
+        *:focus {
+            outline: none;
+        }
         
         .goTestLink {
           position: relative;
@@ -594,12 +597,9 @@
             font-size: 12px;
             font-weight: bold;
             line-height: 100%;
-            color: #FFF;
-            background: #33d684;
+            color: #6a7989;
             border-radius: 22px;
-            overflow: hidden;
-            padding: 10px 15px 7px;
-            text-transform: uppercase;
+            padding: 8px 12px 7px;
             cursor: pointer;
         }
         
