--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
   <body>
     <div class="container">
       <div>
-        <h2 class="Logo">Telegram GoTo⚡️</h2><span class="btn_changeLang" onclick="changeLang()">eng</span>
+        <h2 class="Logo">Telegram GoTo⚡️<span class="btn_changeLang" onclick="changeLang()">eng</span></h2>
             <div class="about">
                 <p class="m1">
                 Когда не работает t.me/ - работает tgo.to/
