--- a/about.html
+++ b/about.html
@@ -192,6 +192,14 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
             color: #0073CF;
             cursor: pointer;
         }
+     
+        .btn_changeLang {
+            position: relative;
+            font-size: 14px;
+            top: -25px;
+            color: #0073CF;
+            cursor: pointer;
+        }
                                                                                                                    
         @keyframes fade-in-right {
           from {
