--- a/about.html
+++ b/about.html
@@ -194,9 +194,9 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
         }
      
         .btn_changeLang {
-            position: relative;
+            position: absolute;
             font-size: 14px;
-            top: -25px;
+            top: -15px;
             color: #0073CF;
             cursor: pointer;
         }
