--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
      else {
         window.location = "tg://resolve?domain=" + l.pathname.slice(1);
      }
-     setTimeout(function(){ window.location.href = "/"; }, 1000);
+     //setTimeout(function(){ window.location.href = "/"; }, 1000);
    }
   
   
