--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
               (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
               (l.hash))
      if (l.pathname.split('/')[1] == 'joinchat') {
-        window.location = "tg://join?" + l.pathname.split('/')[2];
+        window.location = "tg://join?invite=" + l.pathname.split('/')[2];
      }
      else if (l.pathname.split('/')[2] !== undefined) {
         window.location = "tg://resolve?domain=" + l.pathname.split('/')[1] + '&post=' + l.pathname.split('/')[2];
