--- a/index.html
+++ b/index.html
@@ -628,6 +628,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
             border-radius: 22px;
             padding: 8px 12px 7px;
             cursor: pointer;
+            background: #FFF;
         }
         
         .btn_getLink:hover {
