--- a/about.html
+++ b/about.html
@@ -195,7 +195,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
         }
      
         .containerFadeOutRight {
-            animation: fade-out-right ease-in-out 0.7s forwards;
+            animation: fade-out-left ease-in-out 0.7s forwards;
         }
         
         .rootLink {
