--- a/features.html
+++ b/features.html
@@ -194,7 +194,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
             animation: fade-out-right ease-in-out 0.7s forwards;
         }
         .containerFadeOutRight {
-            animation: fade-out-right ease-in-out 0.7s forwards;
+            animation: fade-out-left ease-in-out 0.7s forwards;
         }
         
         .rootLink {
