--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
         if (navigator.clipboard) {
             navigator.clipboard.readText()
                 .then(text => {
-             console.log(text);
-                  if (text.startsWith("t.me") || text.startsWith("https://t.me") || text.startsWith("@") && currentCookie !== undefined) {
+                  if (text.startsWith("t.me") || text.startsWith("https://t.me") || text.startsWith("@") && currentCookie == undefined) {
                       document.getElementsByClassName("getinput")[0].value = text;
                       document.getElementsByClassName("btn_getLink")[0].classList.add("btn_getLinkShow");
                   }
