--- a/index.html
+++ b/index.html
@@ -302,6 +302,14 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
             setTimeout(function(){document.getElementsByClassName("input__label-content")[0].style.color = "#6a7989";}, 2500);
         });
     }
+     
+    const inputfield = document.getElementsByClassName("getinput")[0];
+    node.addEventListener("keydown", function(event) {
+        if (event.key === "Enter") {
+            event.preventDefault();
+            createLink();
+        }
+    });
         
     function containerSlideUp() {
         document.getElementsByClassName("getinput")[0].blur();
