--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
     function enterListen(e) {
         if (e.keyCode == 13) {
             createLink();
-            //return false;
+            return false;
         }
     }
         
