--- a/features.html
+++ b/features.html
@@ -167,6 +167,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
             align-items: center; /* align items horizontally, in this case */
             overflow: hidden;
             height:100%;
+            background-image: linear-gradient(to bottom, #ffffff, #dbddf2, #afbee6, #78a2da, #0088cc);
         }
                                                                                                                    
         .Logo {
@@ -188,7 +189,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
             animation: fade-in-top ease 0.5s forwards;
             animation-delay: 0.8s;
             margin-left: 7px;
-        }
+        }   
         
         .containerFadeOutLeft {
             animation: fade-out-right ease-in-out 0.7s forwards;
