--- a/features.html
+++ b/features.html
@@ -110,20 +110,23 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
         <h2 class="Logo">Telegram GoTo⚡️<span class="btn_changeLang" onclick="changeLang()">eng</span></h2>
             <div class="features">
                 <div class="features-list">
+                    <br>
                     <div class="feature1">
-                        <video onclick="this.paused ? this.play() : this.pause();" autoplay="autoplay">
+                        <video onclick="this.paused ? this.play() : this.pause();" autoplay loop>
                           <source src="/createlink.mp4" type="video/mp4" />
                         </video>
                         <span class="videoDescription">При создании ссылка автоматически копируется</span>
                     </div>
+                 <br>
                     <div class="feature2">
-                        <video onclick="this.paused ? this.play() : this.pause();" autoplay="autoplay">
+                        <video onclick="this.paused ? this.play() : this.pause();" autoplay loop>
                           <source src="/TestOpen.mp4" type="video/mp4" />
                         </video>
                         <span class="videoDescription">После создания ссылку можно сразу открыть</span>
                     </div>
+                 <br>
                     <div class="feature3">
-                        <video onclick="this.paused ? this.play() : this.pause();" autoplay="autoplay">
+                        <video onclick="this.paused ? this.play() : this.pause();" autoplay loop>
                           <source src="/addToHomeScreen.mp4" type="video/mp4" />
                         </video>
                         <span class="videoDescription">Приложение можно добавить на рабочий стол</span>
@@ -136,6 +139,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
                 <div class="rootLink" onclick="goRoot()">
                     на главную ->
                 </div>
+                <br>
             </div>
         </div>
     <style>
@@ -147,14 +151,12 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
         }
         
         html, body {
-            position: fixed;
             top: 0; 
             bottom: 0;
             left: 0;
             right: 0;
             margin: 0;
             padding: 0;
-            height: 100%;
             background-color: #fff;
             font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
         }
