--- a/about.html
+++ b/about.html
@@ -80,6 +80,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
             document.getElementsByClassName("credits")[0].innerHTML = "Creator: <a href='https://tgo.to/cryptohumanbeing'>@cryptohumanbeing</a><br><br>For all questions:<br> <a href='https://tgo.to/nikitashal'>@nikitashal</a> with notice #digitalresistance";
             document.getElementsByClassName("rootLink")[0].innerHTML = "<- to main page";
             document.getElementsByClassName("btn_changeLang")[0].innerHTML = "ru";
+            document.getElementsByClassName("featuresLink")[0].innerHTML = "features ->";
         }
         if (getCookie('lang') == 'ru') {
             document.getElementsByClassName("m1")[0].innerHTML = "Когда не работает t.me/ - работает tgo.to/";
@@ -87,7 +88,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
             document.getElementsByClassName("m3")[0].innerHTML = "<i>Есть аналоги. Чем <a href='https://tgo.to'>tgo.to</a> лучше?</i> - Аналоги вынуждают смотреть рекламу до перехода в Телеграм.";
             document.getElementsByClassName("credits")[0].innerHTML = "Создатель сервиса: <a href='https://tgo.to/cryptohumanbeing'>@cryptohumanbeing</a><br><br>По всем вопросам:<br> <a href='https://tgo.to/nikitashal'>@nikitashal</a> с пометкой #digitalresistance";
             document.getElementsByClassName("rootLink")[0].innerHTML = "<- на главную";
-            document.getElementsByClassName("btn_changeLang")[0].innerHTML = "eng";
+            document.getElementsByClassName("featuresLink")[0].innerHTML = "фишки сайта ->";
         }
     });
     function goRoot(){
