--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
             document.getElementsByClassName("m3")[0].innerHTML = "<i>Есть аналоги. Чем <a href='https://tgo.to'>tgo.to</a> лучше?</i> - Аналоги вынуждают смотреть рекламу до перехода в Телеграм.";
             document.getElementsByClassName("credits")[0].innerHTML = "Создатель сервиса: <a href='https://tgo.to/cryptohumanbeing'>@cryptohumanbeing</a><br><br>По всем вопросам:<br> <a href='https://tgo.to/nikitashal'>@nikitashal</a> с пометкой #digitalresistance";
             document.getElementsByClassName("rootLink")[0].innerHTML = "<- на главную";
-            document.getElementsByClassName("featuresLink")[0].innerHTML = "фишки сайта ->";
+            document.getElementsByClassName("featuresLink")[0].innerHTML = "функции сайта ->";
         }
     });
     function goRoot(){
