--- a/index.html
+++ b/index.html
@@ -392,22 +392,22 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
         <div class="box">
         <span class="input input--kyo goTestLink">
             <a class="btn_changeLang" onclick="changeLang()"></a>
-            <a class="btn_goTestLink" onclick="goTestLink()">открыть</a>
+            <a class="btn_goTestLink" onclick="goTestLink()"></a>
             <input class="getinput input__field input__field--kyo" type="search" id="input-19" onblur="colorTextGray()" onfocus="colorTextWhite()" oninput="cookieMaster()" onkeypress="return enterListen(event)" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
             <label class="input__label input__label--kyo" for="input-19">
-                <span class="input__label-content input__label-content--kyo">Укажите ссылку <span class="notValid_not">t.me/</span> или <span class="notValid_not">@username</span></span>
+                <span class="input__label-content input__label-content--kyo"></span>
             </label>
         </span>
         </div>
         <div class="box">
-            <button onclick="createLink()" class="btn_getLink">Получить ссылку</button>
+            <button onclick="createLink()" class="btn_getLink"></button>
         </div>
     </div>
     <div onmouseover="containerSlideUp()" onmouseleave="containerSlideDown()" onclick="goAbout()" class="aboutLink">
         ?
     </div>
     <div class="sayHello">
-        Хочешь узнать подробнее
+        
     </div>
     <style>
         *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
