--- a/features.html
+++ b/features.html
@@ -24,7 +24,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
     <meta name="yandex-verification" content="9514ed2cd535e5da" />
     <meta name="msapplication-TileColor" content="#1e96c8">
     <meta name="theme-color" content="#1e96c8">
-    <title>Telegram GoTo About⚡️</title>
+    <title>Telegram GoTo Features⚡️</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111537010-2"></script>
     <script>
