--- a/features.html
+++ b/features.html
@@ -77,7 +77,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
             document.getElementsByClassName("rootLink")[0].innerHTML = "to main page ->";
             document.getElementsByClassName("aboutLink")[0].innerHTML = "<- about";
             document.getElementsByClassName("btn_changeLang")[0].innerHTML = "ru";
-            document.getElementsByClassName("feature1")[0].innerHTML = "When you create a link is automatically copied";
+            document.getElementsByClassName("feature1")[0].innerHTML = "when you create a link it is automatically copied";
             document.getElementsByClassName("feature2")[0].innerHTML = "After creating the link, you can immediately open";
             document.getElementsByClassName("feature3")[0].innerHTML = "The application can be added to the desktop";
             document.getElementsByClassName("feature4")[0].innerHTML = "After the reload, the link will remain in place.";
