--- a/features.html
+++ b/features.html
@@ -80,7 +80,7 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
             document.getElementsByClassName("feature1")[0].innerHTML = "when you create a link it is automatically copied";
             document.getElementsByClassName("feature2")[0].innerHTML = "After creating the link, you can immediately open";
             document.getElementsByClassName("feature3")[0].innerHTML = "The application can be added to the desktop";
-            document.getElementsByClassName("feature4")[0].innerHTML = "After the reload, the link will remain in place.";
+            document.getElementsByClassName("feature4")[0].innerHTML = "after refreshing the page the link will remain in place.";
             document.getElementsByClassName("instruction")[0].innerHTML = "Click on the video to play";
         }
         if (getCookie('lang') == 'ru') {
