--- a/index.html
+++ b/index.html
@@ -670,6 +670,12 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
                 padding: 10px;
             }
         }
+     
+        @media (prefers-color-scheme: dark) {
+          html, body {
+            background-color: #000;
+          }
+        }
     </style>
 </body>
 </html>
