added dark mode

--- a/features.html
+++ b/features.html
@@ -314,6 +314,18 @@ ________  ___  ________  ___  _________  ________  ___       ________  _______  
                 text-align: center;
             }
         }
+        @media (prefers-color-scheme: dark) {
+          html, body {
+            background-color: #111;
+          }
+          .container
+          { 
+            color: #ededed;
+          }
+           a {
+            color: #52a2f7;
+          }
+        }
     </style>
   </body>
 </html>
